# MaximusDB

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  maxbench.cpp  utils.hpp
scripts/: build_arrow.sh  build_cudf.md  build_taskflow.sh
src/maximus/: CMakeLists.txt  config.cpp  config.hpp  context.cpp  context.hpp  database.cpp  database.hpp  database_catalogue.cpp  database_catalogue.hpp  error_handling.hpp  memory_pool.hpp  proxy_memory_pool.hpp
src/maximus/clickbench/: clickbench_queries.cpp
src/maximus/dag/: query_node.cpp  query_node.hpp
src/maximus/exec/: executor.cpp  executor.hpp  pipeline.cpp
src/maximus/frontend/: expressions.cpp  expressions.hpp  query_plan_api.cpp  query_plan_api.hpp
src/maximus/gpu/cudf/: csv.cpp  csv.hpp  cudf_expr.cpp  cudf_expr.hpp  cudf_types.cpp  cudf_types.hpp  parquet.cpp  parquet.hpp  table_reader.cpp  table_writer.cpp  table_writer.hpp
src/maximus/gpu/gtable/: gtable.cpp  gtable.hpp
src/maximus/h2o/: h2o_queries.cpp
src/maximus/io/: parquet.cpp  parquet.hpp
src/maximus/operators/: abstract_filter_operator.cpp  abstract_operator.hpp  abstract_table_source_operator.hpp  engine.cpp  engine.hpp  properties.hpp
src/maximus/operators/acero/: interop.cpp  proxy_operator.hpp
src/maximus/operators/gpu/: gpu_operator.hpp
src/maximus/operators/gpu/cudf/: filter_operator.cpp  fused_operator.cpp  hash_join_operator.cpp  hash_join_operator.hpp  limit_operator.cpp  local_broadcast_operator.cpp  order_by_operator.cpp  project_operator.cpp  table_source_operator.cpp
src/maximus/operators/native/: limit_operator.cpp  random_table_source_operator.cpp  table_sink_operator.hpp  table_source_operator.cpp  table_source_operator.hpp
src/maximus/profiler/: profiler.hpp
src/maximus/sql/: parser.cpp
src/maximus/tpch/: tpch_queries.cpp  tpch_queries.hpp
src/maximus/types/: device_table_ptr.cpp  device_table_ptr.hpp  node_type.cpp  node_type.hpp  physical_operator_type.cpp  physical_operator_type.hpp  schema.cpp  schema.hpp  table.cpp  table_batch.cpp  types.cpp  types.hpp
src/maximus/utils/: arrow_helpers.cpp  arrow_helpers.hpp  json_helpers.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  acero.cpp  cuda.cpp  operators.cpp  sql.cpp  tpch.cpp
tests/tpch/: generate_data.py
